<resources>
    <string name="app_name">X-Wing Dice Probability Calculator</string>
    <string name="dice_roller_bartitle">X-Wing Calculator</string>

    <string name="banner_ad_unit_id">ca-app-pub-6884033300993433/2996288501</string>
    ca-app-pub-6884033300993433/2996288501

    TEST ca-app-pub-3940256099942544/6300978111
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>

    <string name="about_title">How to Use:</string>
    <string name="about_barcolorsstring">Bar Colors</string>

    <string name="about_bartext">Bars are used to denote the possibility of occurance. If the bar is Green, it beats the probability of the opposing roll. If it is red, it loses in probability.</string>
    <string name="about_column">Left and Right Columns</string>
    <string name="about_columntext">Left column denotes probability of getting EXACTLY listed amount of successes. Right column denotes probability of getting AT LEAST listed amount of successes. Right column is more
     useful in standard play. Best uses for Left column include, but are not limited to: C-3P0.</string>

    <string name="about_barheight">Bar Heights</string>
    <string name="about_barheighttext">Longer bars denote a higher probability of occurance. </string>

    <string name="about_modifiers">Modifiers</string>
    <string name="about_modifiers_text">Checking the modifiers (Focus, Target Lock) will modify probabilities accordingly. Either, both or none can be checked at once.</string>


    <color name="goodGreen">#0da021</color>
    <color name="okayYellow">#0da021</color>
    color name="okayYellow">#FFBD9D00
    <color name="badRed">#af2421</color>
    <string name="title_activity_about">About</string>

</resources>
